<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>olt_ros2_pipeline</name>
  <version>0.0.0</version>
  <description>ROS 2 reimplementation of Object Localization and Tracking vision pipeline.</description>
  <author email="krzysztof.wojciechowski@laas.fr">Krzysztof Wojciechowski</author>
  <maintainer email="guilhem.saurel@laas.fr">Guilhem Saurel</maintainer>
  <license>BSD</license>

  <url type="website">https://gitlab.laas.fr/kwojciecho/olt_ros2_pipeline</url>
  <url type="bugtracker">https://gitlab.laas.fr/kwojciecho/olt_ros2_pipeline/-/issues</url>
  <url type="repository">https://gitlab.laas.fr/kwojciecho/olt_ros2_pipeline</url>

  <exec_depend>m3t_tracker_ros</exec_depend>
  <exec_depend>happypose_ros</exec_depend>
  <exec_depend>happypose_marker_publisher</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>pinocchio</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
